tests/paczka1/fuzzy1/28452218.err
Error in line 1: g3u S407 79,8
Error in line 15: S407 A400 144,4
Error in line 21: S407 S391 93,0
Error in line 24: g3u S407 80,3
Error in line 28: g3u A400 13,4
